don't fail fast

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -38,6 +38,7 @@ jobs:
   Prepare:
     strategy:
       matrix:
+        fail-fast: false
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
 
     runs-on: ${{ matrix.runner }}
@@ -66,6 +67,7 @@ jobs:
     strategy:
       matrix:
         node: [20]
+        fail-fast: false
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
     if: github.event.pull_request.labels.*.name != 'skip-lint'
     runs-on: ${{ matrix.runner }}
@@ -123,6 +125,7 @@ jobs:
     if: ${{ inputs.proof_systems_commit == '' }}
     strategy:
       matrix:
+        fail-fast: false
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
 
     runs-on: ${{ matrix.runner }}
@@ -151,6 +154,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        fail-fast: false
         test_type:
           [
             'Simple integration tests',
@@ -199,6 +203,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        fail-fast: false
         chunk: [1, 2, 3, 4, 5, 6, 7, 8]
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
     runs-on: ${{ matrix.runner }}
@@ -271,6 +276,7 @@ jobs:
     needs: [Run-Unit-Tests]
     strategy:
       matrix:
+        fail-fast: false
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
 
     runs-on: ${{ matrix.runner }}
@@ -282,6 +288,7 @@ jobs:
     timeout-minutes: 90
     strategy:
       matrix:
+        fail-fast: false
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
 
     runs-on: ${{ matrix.runner }}
@@ -338,6 +345,7 @@ jobs:
     timeout-minutes: 45
     strategy:
       matrix:
+        fail-fast: false
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
 
     runs-on: ${{ matrix.runner }}
@@ -377,6 +385,7 @@ jobs:
     timeout-minutes: 45
     strategy:
       matrix:
+        fail-fast: false
         runner: [sdk-team-github-runner-arm-01-benchmarks,sdk-team-github-runner-x86-01-benchmarks,sdk-team-github-runner-x86-02-build,sdk-team-github-runner-x86-03-build,sdk-team-github-runner-x86-04-build]
 
     runs-on: ${{ matrix.runner }}
