move format back to github allow overwrite

--- a/.github/actions/upload/action.yml
+++ b/.github/actions/upload/action.yml
@@ -41,5 +41,6 @@ runs:
     - name: Upload bindings
       uses: actions/upload-artifact@v4
       with:
+        overwrite: true
         name: bindings.tar.gz
         path: bindings.tar.gz
