--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -15,20 +15,15 @@ jobs:
 
   Check-npm-deps:
     name: Check npmDepsHash is correct
-    runs-on: ubuntu-latest
+    runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
+      - name: Set up Nix
+        run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
       - name: Disable smudging
         run: echo "GIT_LFS_SKIP_SMUDGE=1" >> $GITHUB_ENV
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: nixbuild/nix-quick-install-action@v30
-        continue-on-error: true
-        with:
-          nix_conf: |
-            keep-env-derivations = true
-            keep-outputs = true
-            require-sigs = false
       - name: fix npmDepsHash
         run: |
           set -Eeu
