--- a/package.json
+++ b/package.json
@@ -83,12 +83,13 @@
   "author": "O(1) Labs",
   "devDependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
-    "@noble/hashes": "^1.3.2",
     "@noble/curves": "1.8.1",
+    "@noble/hashes": "^1.3.2",
     "@playwright/test": "^1.48.0",
     "@types/jest": "^27.0.0",
+    "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/node": "^18.14.2",
-    "esbuild": "^0.19.2",
+    "esbuild": "^0.25.5",
     "expect": "^29.0.1",
     "fs-extra": "^10.0.0",
     "glob": "^8.0.3",
@@ -104,11 +105,10 @@
     "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.8",
-    "typedoc": "^0.27",
-    "typedoc-plugin-markdown": "^4.4",
-    "typedoc-plugin-merge-modules": "^6.1",
-    "typescript": "^5.4.5",
-    "@types/libsodium-wrappers-sumo": "^0.7.8"
+    "typedoc": "^0.28.5",
+    "typedoc-plugin-markdown": "^4.6.4",
+    "typedoc-plugin-merge-modules": "^7.0.0",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "blakejs": "1.2.1",
