--- a/.github/workflows/remote_bindings.yml
+++ b/.github/workflows/remote_bindings.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - uses: actions/checkout@v4
+        env:
+          GIT_LFS_SKIP_SMUDGE: 1
         with:
           submodules: recursive
       - name: upload
