--- a/.github/workflows/remote_bindings.yml
+++ b/.github/workflows/remote_bindings.yml
@@ -1,5 +1,8 @@
 name: Build and upload bindings
 on:
+  push:
+    branches:
+      - shigoto/build/bindings-remote 
   workflow_dispatch:
   workflow_call:
 
@@ -11,6 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          lfs: true
       - name: upload
         uses: ./.github/actions/upload
         with:
