--- a/.github/workflows/remote_bindings.yml
+++ b/.github/workflows/remote_bindings.yml
@@ -11,9 +11,17 @@ jobs:
     name: upload bindings artifact
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
+      - name: Install git-lfs
+        run: |
+          if ! command -v git-lfs &>/dev/null; then
+            sudo apt-get update && sudo apt-get install -y git-lfs
+          fi
+          git lfs install
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          lfs: true
+          fetch-depth: 0
       - name: upload
         uses: ./.github/actions/upload
         with:
