--- a/.github/workflows/remote_bindings.yml
+++ b/.github/workflows/remote_bindings.yml
@@ -11,17 +11,27 @@ jobs:
     name: upload bindings artifact
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: false
+
       - name: Install git-lfs
         run: |
           if ! command -v git-lfs &>/dev/null; then
             sudo apt-get update && sudo apt-get install -y git-lfs
           fi
           git lfs install
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          lfs: true
-          fetch-depth: 0
+      
+          - name: Fetch Mina submodule (with LFS)
+          run: |
+            git submodule sync --recursive
+            git submodule update --init \
+              --depth 1 \
+              src/mina
+            cd src/mina
+            git lfs pull
+
       - name: upload
         uses: ./.github/actions/upload
         with:
