--- a/.github/workflows/remote_bindings.yml
+++ b/.github/workflows/remote_bindings.yml
@@ -5,37 +5,18 @@ on:
       - shigoto/build/bindings-remote 
   workflow_dispatch:
   workflow_call:
+
 jobs:
   Upload-bindings:
+    name: upload bindings artifact
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
-      - name: Checkout repository (no submodules)
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          submodules: false
-          clean: true
-
-      - name: Install Git LFS
-        run: |
-          if ! command -v git-lfs &>/dev/null; then
-            sudo apt-get update && sudo apt-get install -y git-lfs
-          fi
-          git lfs install
-
-      - name: Init & fetch Mina submodule
-        run: |
-          git submodule sync --recursive
-          git submodule update --init --depth 1 src/mina
-          pushd src/mina
-          git lfs pull
-          popd
-
+          submodules: recursive
       - name: upload
         uses: ./.github/actions/upload
         with:
           cache_id: ${{ secrets.NIX_CACHE_ID }}
           nar_secret: ${{ secrets.NIX_CACHE_NAR_SECRET }}
           gcp_secret: ${{ secrets.NIX_CACHE_GCP_SECRET }}
-
-
