--- a/package.json
+++ b/package.json
@@ -75,39 +75,12 @@
     "test:unit": "./run-unit-tests.sh",
     "test:sparky": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/integration/sparky-*.test.ts",
     "test:sparky:report": "npx tsx src/test/integration/run-sparky-integration-tests.ts",
-    "test:vk-compatibility": "npx tsx src/test/vk-compatibility/run-tests.ts",
+    "test:simple-vk-parity": "npx tsx src/test/simple-vk-parity-test.ts",
+    "test:vk-progress": "npx tsx src/test/vk-parity-tracker.ts",
     "test:vk-parity": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/vk-parity-comprehensive.test.ts --verbose",
     "test:backend-infrastructure": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/backend-infrastructure.test.ts --verbose",
     "test:constraint-analysis": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/constraint-system-analysis.test.ts --verbose",
     "test:framework": "npm run test:vk-parity && npm run test:backend-infrastructure && npm run test:constraint-analysis",
-    "test:unified-report": "npx tsx src/test/run-unified-test-report.ts",
-    "generate:compatibility-dashboard": "npx ts-node src/test/pbt/ci/AutomatedReporting.ts",
-    "monitor:performance": "npx ts-node src/test/pbt/ci/PerformanceMonitoring.ts",
-    "ci:setup": "./scripts/ci/setup-ci-environment.sh",
-    "ci:setup-dirs": "mkdir -p test-results performance-reports historical-data compatibility-dashboard vk-analysis constraint-analysis",
-    "ci:docker-quick": "docker-compose -f scripts/ci/docker-compose.ci.yml --profile quick up --build",
-    "ci:docker-comprehensive": "docker-compose -f scripts/ci/docker-compose.ci.yml --profile comprehensive up --build",
-    "ci:docker-full": "docker-compose -f scripts/ci/docker-compose.ci.yml --profile full up --build",
-    "ci:docker-dashboard": "docker-compose -f scripts/ci/docker-compose.ci.yml --profile dashboard up -d",
-    "test:pbt": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/pbt/**/*.test.ts --verbose",
-    "test:pbt:phase1": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/pbt/properties/basic-field.test.ts --verbose",
-    "test:pbt:phase2": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/pbt/properties/advanced-ops.test.ts --verbose",
-    "test:pbt:phase3": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/pbt/properties/circuit-composition.test.ts --verbose",
-    "test:pbt:report": "npx tsx src/test/pbt/reporting/generate-report.ts",
-    "test:pbt:quick": "TEST_LEVEL=quick node scripts/ci/run-compatibility-tests.js",
-    "test:pbt:comprehensive": "TEST_LEVEL=comprehensive node scripts/ci/run-compatibility-tests.js",
-    "test:pbt:full-vk-analysis": "TEST_LEVEL=full node scripts/ci/run-compatibility-tests.js",
-    "test:pbt:ci-quick": "./scripts/ci/run-quick-tests.sh",
-    "test:pbt:ci-comprehensive": "./scripts/ci/run-comprehensive-tests.sh",
-    "test:pbt:ci-full": "./scripts/ci/run-full-analysis.sh",
-    "test:compatibility": "node test-comprehensive-compatibility.mjs",
-    "test:compatibility:quick": "node test-comprehensive-compatibility.mjs --quick",
-    "test:compatibility:minimal": "node test-comprehensive-compatibility.mjs --minimal",
-    "test:compatibility:basic": "node test-comprehensive-compatibility.mjs --basic",
-    "test:compatibility:intermediate": "node test-comprehensive-compatibility.mjs --intermediate",
-    "test:compatibility:advanced": "node test-comprehensive-compatibility.mjs --advanced",
-    "test:compatibility:comprehensive": "node test-comprehensive-compatibility.mjs --comprehensive",
-    "test:compatibility:suite": "NODE_OPTIONS=--experimental-vm-modules npx jest src/test/pbt/suites/ComprehensiveCompatibilityTestSuite.test.ts --verbose",
     "test:e2e": "rimraf ./tests/report && rimraf ./tests/test-artifacts && npx playwright test",
     "test:all": "./run-all-local-tests.sh",
     "e2e:prepare-server": "npm run build:examples && (cp -rf dist/examples dist/web || :) && node src/build/e2e-tests-build-helper.js && cp -rf src/examples/plain-html/index.html src/examples/plain-html/server.js tests/artifacts/html/*.html tests/artifacts/javascript/*.js dist/web",
