--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "minimist": "^1.2.7",
     "oxlint": "^1.0.0",
     "pkg-pr-new": "^0.0.9",
-    "prettier": "^2.8.4",
+    "prettier": "^3.6.2",
     "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.8",
@@ -116,9 +116,9 @@
     "blakejs": "1.2.1",
     "cachedir": "^2.4.0",
     "js-sha256": "^0.9.0",
-    "reflect-metadata": "^0.1.13",
-    "tslib": "^2.3.0",
     "libsodium-wrappers-sumo": "^0.7.15",
-    "stacktrace-js": "^2.0.2"
+    "reflect-metadata": "^0.1.13",
+    "stacktrace-js": "^2.0.2",
+    "tslib": "^2.3.0"
   }
 }
