--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@noble/curves": "1.8.1",
     "@noble/hashes": "^1.3.2",
     "@playwright/test": "^1.48.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^27.0.0",
     "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/node": "^18.14.2",
