--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "dump-vks": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
     "format": "prettier --write --ignore-unknown",
     "format:check": "prettier --check --ignore-unknown",
-    "format:md": "prettier --config .prettierrc.md.cjs --write '*.md'",
-    "format:md:check": "prettier --config .prettierrc.md.cjs --check '*.md'",
+    "format:md": "prettier --config .prettierrc.md.cjs --write '**/*.md'",
+    "format:md:check": "prettier --config .prettierrc.md.cjs --check '**/*.md'",
     "clean": "rimraf ./dist && rimraf ./src/bindings/compiled/_node_bindings",
     "clean-all": "npm run clean && rimraf ./tests/report && rimraf ./tests/test-artifacts",
     "lint": "npx oxlint",
@@ -98,7 +98,7 @@
     "graphql": "^16.10.0",
     "howslow": "^0.1.0",
     "husky": "^9.1.7",
-    "jest": "^28.1.3",
+      "jest": "^28.1.3",
     "jstat": "^1.9.6",
     "minimist": "^1.2.7",
     "oxlint": "^1.0.0",
