--- a/src/bindings/ocaml/jsoo_exports/dune
+++ b/src/bindings/ocaml/jsoo_exports/dune
@@ -7,23 +7,27 @@
  (enabled_if
   (= %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n} n))
  (targets node_js_plonk_wasm.js node_js_plonk_wasm_bg.wasm)
- (deps (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/plonk_wasm.js) (:d2 ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/plonk_wasm_bg.wasm) )
+ (deps
+  (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/plonk_wasm.js)
+  (:d2
+   ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/plonk_wasm_bg.wasm))
  (action
   (progn
    (run cp %{d1} node_js_plonk_wasm.js)
-   (run cp %{d2} node_js_plonk_wasm_bg.wasm)
-   )))
+   (run cp %{d2} node_js_plonk_wasm_bg.wasm))))
 
 (rule
  (enabled_if
   (= %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n} n))
  (targets web_plonk_wasm.js web_plonk_wasm_bg.wasm)
- (deps (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/web/plonk_wasm.js) (:d2 ../../../mina/src/lib/crypto/kimchi_bindings/js/web/plonk_wasm_bg.wasm) )
+ (deps
+  (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/web/plonk_wasm.js)
+  (:d2
+   ../../../mina/src/lib/crypto/kimchi_bindings/js/web/plonk_wasm_bg.wasm))
  (action
   (progn
    (run cp %{d1} web_plonk_wasm.js)
-   (run cp %{d2} web_plonk_wasm_bg.wasm)
-   )))
+   (run cp %{d2} web_plonk_wasm_bg.wasm))))
 
 (rule
  (enabled_if
@@ -31,9 +35,14 @@
  (targets node_js_plonk_wasm.js node_js_plonk_wasm_bg.wasm)
  (action
   (progn
-   (run cp %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/plonk_wasm.js node_js_plonk_wasm.js)
-   (run cp %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/plonk_wasm_bg.wasm node_js_plonk_wasm_bg.wasm)
-   )))
+   (run
+    cp
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/plonk_wasm.js
+    node_js_plonk_wasm.js)
+   (run
+    cp
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/plonk_wasm_bg.wasm
+    node_js_plonk_wasm_bg.wasm))))
 
 (rule
  (enabled_if
@@ -41,9 +50,14 @@
  (targets web_plonk_wasm.js web_plonk_wasm_bg.wasm)
  (action
   (progn
-   (run cp %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/plonk_wasm.js web_plonk_wasm.js)
-   (run cp %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/plonk_wasm_bg.wasm web_plonk_wasm_bg.wasm)
-   )))
+   (run
+    cp
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/plonk_wasm.js
+    web_plonk_wasm.js)
+   (run
+    cp
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/plonk_wasm_bg.wasm
+    web_plonk_wasm_bg.wasm))))
 
 (executable
  (name o1js_node)
