--- a/src/bindings/ocaml/dune
+++ b/src/bindings/ocaml/dune
@@ -1,15 +1,16 @@
 (executable
- (name o1js_types)
- (public_name o1js-types)
- (package o1js_bindings)
- (modules o1js_types)
- (link_flags (-linkall))
- (modes native)
- (libraries mina_base fields_derivers.zkapps yojson)
+ (flags :standard -w +a)
  (instrumentation
   (backend bisect_ppx))
+ (libraries fields_derivers.zkapps mina_base yojson)
+ (link_flags (-linkall))
+ (modes native)
+ (modules o1js_types)
+ (name o1js_types)
+ (package o1js_bindings)
  (preprocess
-  (pps ppx_version)))
+  (pps ppx_version))
+ (public_name o1js-types))
 
 (rule
  (targets jsLayout.json)
@@ -19,26 +20,27 @@
    (run %{exe:./o1js_types.exe}))))
 
 (executable
- (name o1js_constants)
- (public_name o1js-constants)
- (package o1js_bindings)
- (modules o1js_constants)
- (link_flags (-linkall))
- (modes native)
- (libraries
-  mina_base
-  core_kernel
-  base
-  sponge
-  hash_prefixes
-  mina_signature_kind
-  base58_check
-  pickles
-  random_oracle
-  random_oracle.permutation.ocaml
-  yojson
-  protocol_version)
+ (flags :standard -w +a)
  (instrumentation
   (backend bisect_ppx))
+ (libraries
+  base
+  base58_check
+  core_kernel
+  hash_prefixes
+  mina_base
+  mina_signature_kind
+  pickles
+  protocol_version
+  random_oracle
+  random_oracle.permutation.ocaml
+  sponge
+  yojson)
+ (link_flags (-linkall))
+ (name o1js_constants)
+ (modes native)
+ (modules o1js_constants)
+ (package o1js_bindings)
  (preprocess
-  (pps ppx_version)))
+  (pps ppx_version))
+ (public_name o1js-constants))
