js-layout-to-types: delegate prettier call to user
js-layout-to-types job should only be the generation of the files.
Prettifying the file should be done as a second step, by calling
`npm run format .`. This aligns with the UNIX philisophy that a script should be
doing only one thing, and well.

It removes some dependencies regarding prettier in the stanzas definition, and
simplify the addition of new plugins prettier might need.

--- a/src/bindings/mina-transaction/gen/v1/dune
+++ b/src/bindings/mina-transaction/gen/v1/dune
@@ -9,9 +9,6 @@
   (<> %{env:NO_JS_BUILD=0} 1))
  (deps
   (:script ../../../../build/js-layout-to-types.mjs)
-  ../../../ocaml/jsLayout.json
-  ../../../../../.prettierrc.cjs
-  ../../../../../node_modules/prettier/standalone.js
-  (glob_files ../../../../../node_modules/prettier/plugins/*))
+  ../../../ocaml/jsLayout.json)
  (action
   (run node %{script})))
