--- a/src/bindings/mina-transaction/gen/v2/dune
+++ b/src/bindings/mina-transaction/gen/v2/dune
@@ -6,9 +6,6 @@
   (<> %{env:NO_JS_BUILD=0} 1))
  (deps
   (:script ../../../../build/js-layout-to-types-v2.mjs)
-  (:data ../../../ocaml/jsLayout.json)
-  ../../../../../.prettierrc.cjs
-  ../../../../../node_modules/prettier/standalone.js
-  (glob_files ../../../../../node_modules/prettier/plugins/*))
+  (:data ../../../ocaml/jsLayout.json))
  (action
   (run node %{script} %{data} js-layout.ts)))
