add eng-admin to codeowners file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 # Default owners for this repository
-* @o1-labs/exploration-team @o1-labs/future-zkapps @dannywillems
+* @o1-labs/exploration-team @o1-labs/future-zkapps @eng-admin
