--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 # Default owners for this repository
-* @o1-labs/exploration-team @o1-labs/future-zkapps @eng-admin
+* @o1-labs/exploration-team @o1-labs/future-zkapps @o1-labs/eng-admin
