--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -51,6 +51,27 @@ jobs:
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
 
+  BuildMatrix:
+    strategy:
+      matrix:
+        method: ["default","devshell"]
+        system: [ "ubuntu-latest"] # TODO macos here
+    runs-on: ${{ matrix.system }}
+    steps:
+      - name: Checkout repository with submodules
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          repository: ${{ inputs.target_repo || github.repository }}
+          ref: ${{ inputs.target_ref || github.ref }}
+      - name: Build
+        uses: ./.github/actions/build
+        with:
+          method: ${{ matrix.method }}
+          repository: ${{ inputs.target_repo || github.repository }}
+          ref: ${{ inputs.target_ref || github.ref }}
+          proof_systems_commit: ${{ inputs.proof_systems_commit }}
+
   Lint-Format-and-TypoCheck:
     strategy:
       matrix:
@@ -306,7 +327,7 @@ jobs:
     needs: [Prepare]
     timeout-minutes: 45
     runs-on: ubuntu-latest
-    if: github.event.pull_request.base.ref != 'develop' 
+    if: github.event.pull_request.base.ref != 'develop'
     services:
       mina-local-network:
         image: o1labs/mina-local-network:master-latest-lightnet
@@ -342,7 +363,7 @@ jobs:
     needs: [Prepare]
     timeout-minutes: 45
     runs-on: ubuntu-latest
-    if: github.event.pull_request.base.ref != 'develop' 
+    if: github.event.pull_request.base.ref != 'develop'
     services:
       mina-local-network:
         image: o1labs/mina-local-network:compatible-latest-lightnet
