--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -51,11 +51,14 @@ jobs:
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
 
+  # TODO move to nightly maybe? it's a lot of builds to run
   BuildMatrix:
     strategy:
+      fail-fast: false
       matrix:
         method: ["default","devshell"]
         system: [ "ubuntu-latest"] # TODO macos here
+        nix_version: ["2.29.1","2.28.4","2.26.4","2.24.15"]
     runs-on: ${{ matrix.system }}
     steps:
       - name: Checkout repository with submodules
@@ -68,6 +71,7 @@ jobs:
         uses: ./.github/actions/build
         with:
           method: ${{ matrix.method }}
+          nix_version: ${{ matrix.nix_version }}
           repository: ${{ inputs.target_repo || github.repository }}
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
