--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -32,8 +32,7 @@ jobs:
       - name: fix npmDepsHash
         run: |
           set -Eeu
-          ./pin.sh
-          nix run o1js#update-npm-deps
+          nix run .#update-npm-deps
       # if the npmDepsHash is out of date auto commit the new one
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
