--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -72,6 +72,32 @@ jobs:
           ref: ${{ inputs.target_ref || github.ref }}
       - name: Disable smudging
         run: echo "GIT_LFS_SKIP_SMUDGE=1" >> $GITHUB_ENV
+      - name: Create post-build hook for continuous cache upload
+        run: |
+          # Create script with embedded credentials (no echoing)
+          cat > /tmp/upload-to-cache.sh << EOF
+          #!/bin/bash
+          set -eu
+          echo "=== Post-build hook triggered ==="
+          if [ -n "\${OUT_PATHS:-}" ] && [ -n "${{ secrets.NIX_CACHE_GCP_ID }}" ] && [ -n "${{ secrets.NIX_CACHE_NAR_SECRET }}" ]; then
+            echo "Signing and uploading \$(echo \$OUT_PATHS | wc -w) derivations"
+            export AWS_ACCESS_KEY_ID="${{ secrets.NIX_CACHE_GCP_ID }}"
+            export AWS_SECRET_ACCESS_KEY="${{ secrets.NIX_CACHE_GCP_SECRET }}"
+            # Create temporary key file
+            temp_key=\$(mktemp)
+            echo "${{ secrets.NIX_CACHE_NAR_SECRET }}" > "\$temp_key"
+            # Sign the outputs
+            nix store sign --key-file "\$temp_key" --recursive \$OUT_PATHS 2>/dev/null || true
+            # Upload to cache
+            nix copy --to "s3://mina-nix-cache?endpoint=https://storage.googleapis.com" \$OUT_PATHS 2>/dev/null || true
+            # Clean up
+            rm "\$temp_key"
+            echo "Upload completed"
+          else
+            echo "Skipping upload - missing credentials or no outputs"
+          fi
+          EOF
+          chmod +x /tmp/upload-to-cache.sh
       - name: Install nix
         uses: nixbuild/nix-quick-install-action@v32
         with:
@@ -80,6 +106,7 @@ jobs:
             keep-env-derivations = true
             keep-outputs = true
             require-sigs = false
+            post-build-hook = /tmp/upload-to-cache.sh
       - name: Build the o1js bindings (default)
         if: ${{ matrix.method == 'default' }}
         run: |
