--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -59,7 +59,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        method: ["default","devshell"]
+        method: ["default"] # ,"devshell"
+        #TODO enable devshell
+        #Currently disabled because the free runners don't have enough disk space
         system: [ "ubuntu-latest"] # TODO macos here
         nix_version: ["2.29.1","2.28.4"] # We require nix 2.28+
     runs-on: ${{ matrix.system }}
