--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -59,13 +59,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        method: ["default"] # ,"devshell"
-        #TODO enable devshell
-        #Currently disabled because the free runners don't have enough disk space
+        method: ["default" ,"devshell"]
         system: [ "ubuntu-latest"] # TODO macos here
         nix_version: ["2.29.1","2.28.4"] # We require nix 2.28+
     runs-on: ${{ matrix.system }}
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
       - name: Checkout repository with submodules
         uses: actions/checkout@v4
         with:
