--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -257,6 +257,10 @@ jobs:
           cache_id: ${{ secrets.NIX_CACHE_GCP_ID }}
           nar_secret: ${{ secrets.NIX_CACHE_NAR_SECRET }}
           gcp_secret: ${{ secrets.NIX_CACHE_GCP_SECRET }}
+      - name: Setup Node.JS ${{ matrix.node }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
       - name: Count tests
         id: count_tests
         run: |
