--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "node": ">=18.14.0"
   },
   "scripts": {
-    "dev": "npx tsc -p tsconfig.test.json && node src/build/copy-to-dist.js",
-    "build": "npm run checkForBindings && node src/build/copy-artifacts.js && rimraf ./dist/node && npm run dev && node src/build/build-node.js",
+    "build:dev": "npx tsc -p tsconfig.test.json && node src/build/copy-to-dist.js",
+    "build": "npm run checkForBindings && node src/build/copy-artifacts.js && rimraf ./dist/node && npm run build:dev && node src/build/build-node.js",
     "build:bindings": "./src/bindings/scripts/build-o1js-node.sh",
     "build:update-bindings": "./src/bindings/scripts/update-o1js-bindings.sh",
     "build:bindings-remote": "./src/bindings/scripts/remote-build-bindings.sh && npm run build",
