--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "scripts": {
     "build:dev": "npx tsc -p tsconfig.test.json && node src/build/copy-to-dist.js",
-    "build": "npm run checkForBindings && node src/build/copy-artifacts.js && rimraf ./dist/node && npm run build:dev && node src/build/build-node.js",
+    "build": "./src/build/build.sh",
     "build:bindings": "./src/bindings/scripts/build-o1js-node.sh",
     "build:update-bindings": "./src/bindings/scripts/update-o1js-bindings.sh",
     "build:bindings-remote": "./src/bindings/scripts/remote-build-bindings.sh && npm run build",
