--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "build:bindings-remote": "./src/bindings/scripts/remote-build-bindings.sh && npm run build",
     "build:bindings-download": "./src/bindings/scripts/download-bindings.sh",
     "build:web": "rimraf ./dist/web && node src/build/build-web.js",
-    "build:examples": "npm run build && rimraf ./dist/examples && npx tsc -p tsconfig.examples.json && npx tsc -p benchmark/tsconfig.json",
+    "build:examples": "./scripts/build/build-examples.sh",
     "checkForBindings": "test -d ./src/bindings/compiled || npm run build:bindings-download",
     "build:docs": "npx typedoc",
     "prepublish:web": "npm run checkForBindings && NODE_ENV=production node src/build/build-web.js",
