--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
     "build:bindings-download": "./src/bindings/scripts/download-bindings.sh",
     "build:web": "rimraf ./dist/web && node src/build/build-web.js",
     "build:examples": "npm run build && rimraf ./dist/examples && npx tsc -p tsconfig.examples.json && npx tsc -p benchmark/tsconfig.json",
-    "checkForBindings": "test -d ./src/bindings/compiled || npm run build:bindings-download",
+    "check:bindings": "test -d ./src/bindings/compiled || npm run build:bindings-download",
     "build:docs": "npx typedoc",
-    "prepublish:web": "npm run checkForBindings && NODE_ENV=production node src/build/build-web.js",
-    "prepublish:node": "npm run checkForBindings && node src/build/copy-artifacts.js && rimraf ./dist/node && tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
+    "prepublish:web": "npm run check:bindings && NODE_ENV=production node src/build/build-web.js",
+    "prepublish:node": "npm run check:bindings && node src/build/copy-artifacts.js && rimraf ./dist/node && tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
     "prepublishOnly": "npm run prepublish:web && npm run prepublish:node",
     "dump-vks": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
     "format": "prettier --write --ignore-unknown",
