Rename "dump-vks" package.json script to "test:dump-verification-keys"

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "prepublish:web": "npm run check:bindings && NODE_ENV=production node src/build/build-web.js",
     "prepublish:node": "npm run check:bindings && node src/build/copy-artifacts.js && rimraf ./dist/node && tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
     "prepublishOnly": "npm run prepublish:web && npm run prepublish:node",
-    "dump-vks": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
+    "test:dump-verification-keys": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
     "format": "prettier --write --ignore-unknown",
     "format:check": "prettier --check --ignore-unknown",
     "format:md": "prettier --config .prettierrc.md.cjs --write '**/*.md'",
