--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -87,10 +87,10 @@ jobs:
         uses: ./.github/actions/build
       - name: Build o1js and mina-signer
         run: |
-          npm run prepublishOnly
+          npm run prepublish:full
           cd src/mina-signer
           npm ci
-          npm run prepublishOnly
+          npm run prepublish:full
       - name: Publish o1js and mina-signer on pkg-pr-new
         run: npx pkg-pr-new publish ./ ./src/mina-signer # Enable `--compact` once published to NPM with `repository` in package.json
 
@@ -123,7 +123,7 @@ jobs:
       - name: Build o1js
         run: |
           npm ci
-          npm run prepublishOnly
+          npm run prepublish:full
 
       - name: Publish to NPM if version has changed
         id: publish
