--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "build:examples": "./scripts/build/build-examples.sh",
     "check:bindings": "./scripts/build/check-for-bindings.sh",
     "build:docs": "npx typedoc",
-    "prepublish:web": "npm run checkForBindings && NODE_ENV=production node src/build/build-web.js",
-    "prepublish:node": "npm run checkForBindings && node src/build/copy-artifacts.js && rimraf ./dist/node && tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
-    "prepublish:only": "npm run prepublish:web && npm run prepublish:node",
+    "prepublish:web": "./scripts/prepublish/prepublish-web.sh",
+    "prepublish:node": "./scripts/prepublish/prepublish-node.sh",
+    "prepublish:only": "./scripts/prepublish/prepublish-all.sh",
     "dump-vks": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
     "format": "prettier --write --ignore-unknown",
     "format:check": "prettier --check --ignore-unknown",
